--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,7 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --color-main-purple: var(--main-purple);
 }
 
 :root {
@@ -66,6 +67,7 @@
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
   --font-plus-jakarta-sans: "Plus Jakarta Sans", sans-serif;
+  --main-purple: #635FC7;
 }
 
 .dark {
