--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,6 @@
 
 @custom-variant dark (&:is(.dark *));
 
-
 :root {
   --black: oklch(9.11% 0.0512 263.84deg);
   --very-dark-grey-dark-bg: oklch(25.07% 0.0211 280.71deg);
@@ -17,6 +16,39 @@
   --main-purple-hover: oklch(75.75% 0.1292 284.63deg);
   --red: oklch(64.93% 0.1848 23.81deg);
   --red-hover: oklch(78.73% 0.1234 20.23deg);
+  --foreground-contrast: var(--black);
+
+  /* Typography */
+  --text-heading-xl: 24px;
+  --text-heading-xl--line-height: normal;
+  --text-heading-xl--letter-spacing: 0px;
+  --text-heading-xl--font-weight: Bold;
+
+  --text-heading-l: 18px;
+  --text-heading-l--line-height: normal;
+  --text-heading-l--letter-spacing: 0px;
+  --text-heading-l--font-weight: Bold;
+
+  --text-heading-m: 15px;
+  --text-heading-m--line-height: normal;
+  --text-heading-m--letter-spacing: 0px;
+  --text-heading-m--font-weight: Bold;
+
+  --text-heading-s: 12px;
+  --text-heading-s--line-height: normal;
+  --text-heading-s--letter-spacing: 2.4px;
+  --text-heading-s--font-weight: Bold;
+
+  --text-body-l: 13px;
+  --text-body-l--line-height: 23px;
+  --text-body-l--letter-spacing: 0px;
+  --text-body-l--font-weight: Medium;
+
+  --text-body-m: 12px;
+  --text-body-m--line-height: normal;
+  --text-body-m--letter-spacing: 0px;
+  --text-body-m--font-weight: Bold;
+  /* End Typography */
 
   --background: var(--light-grey-light-bg);
   --sidebar: var(--white);
@@ -27,13 +59,29 @@
   --background: var(--very-dark-grey-dark-bg);
   --sidebar: var(--dark-grey);
   --divider: var(--lines-dark);
+  --foreground-contrast: var(--white);
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--medium-grey);
+  --color-primary-foreground: var(--white);
   --color-primary: var(--main-purple);
   --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--medium-grey);
   --color-divider: var(--divider);
+  --color-ring: var(--main-purple);
+  --color-foreground-contrast: var(--foreground-contrast);
   --font-sans: var(--font-plus-jakarta-sans);
+  --font-serif: var(--font-plus-jakarta-sans);
+  --font-mono: var(--font-plus-jakarta-sans);
+}
+
+@layer base {
+  body {
+    background-color: var(--background);
+    color: var(--color-foreground);
+    font-family: var(--font-sans);
+    font-size: var(--text-heading-m);
+  }
 }
