--- a/app/globals.css
+++ b/app/globals.css
@@ -90,5 +90,6 @@
     color: var(--color-foreground);
     font-family: var(--font-sans);
     font-size: var(--text-heading-m);
+    scroll-behavior: smooth;
   }
 }
